# oneblock-6th-substrate-node-template-on-chain-2-off-chain

./: Cargo.toml
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
